fixed top spacing on login and register forms

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -20,3 +20,7 @@ fieldset {
 #form-fields {
     min-height: 498px;
 }
+
+.mt-1\/5 {
+    margin-top: 20%;
+}
